force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/CBK_TriggerHandlerAssociation__mdt.object-meta.xml
<CustomObject>
    <description>Parametrización de los Handlers que deben ejecutarse al producirse un determinado evento de Trigger sobre un determinado Objeto.</description>
    <label>Trigger Handler Association</label>
    <pluralLabel>Trigger Handler Associations</pluralLabel>
</CustomObject>