force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/fields/CBK_ActiveParent__c.field-meta.xml
<CustomField>
    <fullName>CBK_ActiveParent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activar/desactivar lógica parent handler (EmailMessage).Si se activa poner class name &quot;CBK_EmailMessage_Parent_TRHan&quot;</description>
    <label>Active Parent Handler (EmailMessage)</label>
    <type>Checkbox</type>
</CustomField>