force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/fields/CBK_FilterProfile__c.field-meta.xml
<CustomField>
    <fullName>CBK_FilterProfile__c</fullName>
    <label>Filter Profile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>