force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/fields/CBK_FilterRecordType__c.field-meta.xml
<CustomField>
    <fullName>CBK_FilterRecordType__c</fullName>
    <label>Filter Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>