force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/fields/CBK_HandlerClassName__c.field-meta.xml
<CustomField>
    <fullName>CBK_HandlerClassName__c</fullName>
    <description>Nombre de la clase Apex que representa el Handler a ejecutar.</description>
    <label>Handler Class Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>