force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/fields/CBK_ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>CBK_ObjectApiName__c</fullName>
    <description>API Name del Objeto sobre el que se produce el evento de Trigger.</description>
    <label>Object API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>