force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/fields/CBK_TriggerEvent__c.field-meta.xml
<CustomField>
    <fullName>CBK_TriggerEvent__c</fullName>
    <description>Evento de Trigger que se produce.</description>
    <label>Trigger Event</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>beforeInsert</fullName>
                <default>true</default>
                <label>beforeInsert</label>
            </value>
            <value>
                <fullName>beforeUpdate</fullName>
            </value>
            <value>
                <fullName>beforeDelete</fullName>
            </value>
            <value>
                <fullName>afterInsert</fullName>
            </value>
            <value>
                <fullName>afterUpdate</fullName>
            </value>
            <value>
                <fullName>afterDelete</fullName>
            </value>
            <value>
                <fullName>afterUndelete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>