force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/fields/CBK_ValidationHandlerEmail__c.field-meta.xml
<CustomField>
    <fullName>CBK_ValidationHandlerEmail__c</fullName>
    <label>CBK ValidationHandlerEmail</label>
    <referenceTo>CBK_ValidationHandlerEmail__mdt</referenceTo>
    <relationshipLabel>Trigger Handler Associations</relationshipLabel>
    <relationshipName>Trigger_Handler_Associations</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>