force-app/main/default/objects/CBK_TriggerHandlerAssociation__mdt/listViews/ParentHandlerEmailMessage.listView-meta.xml
<ListView>
    <fullName>ParentHandlerEmailMessage</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>CBK_ObjectApiName__c</columns>
    <columns>CBK_TriggerEvent__c</columns>
    <columns>CBK_HandlerClassName__c</columns>
    <columns>CBK_ActiveParent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CBK_ActiveParent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Parent Handler EmailMessage</label>
    <language>en_US</language>
</ListView>